refactored for maintainability

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/boutell/tome/issues"
   },
-  "homepage": "https://github.com/boutell/tome#readme"
+  "homepage": "https://github.com/boutell/tome#readme",
+  "dependencies": {
+    "boring": "^1.1.1"
+  }
 }
