--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tome",
+  "name": "@boutell/tome",
   "version": "0.1.0",
   "description": "A text editor, focused on JavaScript",
   "main": "app.js",
