--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "editor"
   ],
   "author": "Thomas Boutell",
-  "license": "MIT",
+  "license": "GPLv3",
   "bugs": {
     "url": "https://github.com/boutell/tome/issues"
   },
