--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@boutell/tome",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "description": "A text editor, focused on JavaScript",
   "main": "app.js",
   "scripts": {
@@ -22,11 +22,14 @@
     "url": "https://github.com/boutell/tome/issues"
   },
   "bin": {
-    "tome": "./bin/tome"
+    "tome": "./bin/tome.js"
   },
   "homepage": "https://github.com/boutell/tome#readme",
   "dependencies": {
+    "ansi-escapes": "^6.2.0",
+    "ansi-styles": "^6.2.1",
     "boring": "^1.1.1",
     "proper-lockfile": "^4.1.2"
-  }
+  },
+  "type": "module"
 }
