--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@boutell/tome",
   "version": "0.13.1",
   "description": "A text editor, focused on JavaScript",
-  "main": "app.js",
+  "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,5 +31,9 @@
     "boring": "^1.1.1",
     "proper-lockfile": "^4.1.2"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^20.9.0",
+    "typescript": "^5.2.2"
+  }
 }
