--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A text editor, focused on JavaScript",
   "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "start": "node dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -34,6 +36,7 @@
   "type": "module",
   "devDependencies": {
     "@types/node": "^20.9.0",
+    "@types/proper-lockfile": "^4.1.4",
     "typescript": "^5.2.2"
   }
 }
